--------工具参考项目

--- a/gmall-common-util/pom.xml
+++ b/gmall-common-util/pom.xml
@@ -72,6 +72,22 @@
                 <artifactId>fastjson</artifactId>
             </dependency>
 
+            <!--swagger-->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+            </dependency>
+
+            <!-- lombok-->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+            </dependency>
+
 
         </dependencies>
 
