--- a/demo-rabbit/src/main/resources/application.yml
+++ b/demo-rabbit/src/main/resources/application.yml
@@ -1,22 +1,16 @@
 spring:
+  rabbitmq:
+    password: guest
+    username: guest
+    addresses: 127.0.0.1
+    port: 5672  # 注意，这里是5672，不是访问界面用的15672，这个是默认值
+    template:
+      exchange: testMessageInput
   cloud:
     stream:
-      bindings:
-        input:
-          destination: queue.log.messages #\u8981\u548Coutput\u7684destination\u4E00\u81F4, \u8FD9\u6837\u624D\u80FD\u5C06\u961F\u5217\u548C\u5199\u5165\u6D88\u606F\u7684exchange\u5173\u8054\u8D77\u6765
-          binder: local_rabbit
-          group: logMessageConsumers
-        output:
-          destination: queue.log.messages
-          binder: local_rabbit
-      binders:
-        local_rabbit:
-          type: rabbit
-          environment:
-            spring:
-              rabbitmq:
-                host: localhost
-                port: 5672
-                username: guest
-                password: guest
-                virtual-host: /
+      rabbit:
+        binder:
+          admin-addresses:
+          compression-level:
+          connection-name-prefix:
+          nodes:
