--- a/gmall-swagger2/pom.xml
+++ b/gmall-swagger2/pom.xml
@@ -13,10 +13,21 @@
     <artifactId>gmall-swagger2</artifactId>
 
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>com.leve.gmall</groupId>-->
+            <!--<artifactId>gmall-common-util</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+
         <dependency>
-            <groupId>com.leve.gmall</groupId>
-            <artifactId>gmall-common-util</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.1.8.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.1.8.RELEASE</version>
         </dependency>
 
         <!--swagger-->
